Cleanup of Ch 11 code.
 - Formatted things so they are on one line instead of multiples.
 - Instead of casting inline multiple times, I cast once to a new variable.